projects div linked to button in hero section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <a class="mr-5 hover:text-white" href="https://pushpendraa3.github.io/email/">Home</a>
-            <a class="mr-5 hover:text-white" href="#">Projects</a>
+            <!-- <a class="mr-5 hover:text-white" href="#">Projects</a> -->
             <a class="mr-5 hover:text-white" href="https://github.com/pushpendraa3">Github</a>
             <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/">Linkedin</a>
             <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3">Twitter</a>
@@ -41,7 +41,7 @@
               <br class="hidden lg:inline-block">I AM PUSHPENDRA</h1>
             <p class="mb-8 leading-relaxed">An email developer</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg"><a href="#">View Projects</a></button>
+              <button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg"><a href="#projects_container">View Projects</a></button>
               <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Download Resume</button>
             </div>
           </div>
@@ -56,7 +56,7 @@
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-wrap w-full mb-20">
             <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-              <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Projects</h1>
+              <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white"><a id="projects_container" href="">Projects</a></h1>
               <div class="h-1 w-20 bg-blue-500 rounded"></div>
             </div>           
           </div>
@@ -138,7 +138,7 @@
            <br>
       <br>
       <br>
-           <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
+           <div class="lg:w-1/2 w-full mb-6 lg:mb-0" style="margin-left:20px;">
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Education and Certifications</h1>
             <div class="h-1 w-20 bg-blue-500 rounded"></div>
           </div>           
