linked projects footer to projects div

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                     
                     <a class="mr-5 hover:text-white" href="https://pushpendraa3.github.io/email/">Home</a>
-                    <a class="mr-5 hover:text-white" href="#">Projects</a>
+                    <a class="mr-5 hover:text-white" href="#projects_container">Projects</a>
                     <a class="mr-5 hover:text-white" href="https://github.com/pushpendraa3">Github</a>
                     <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/">Linkedin</a>
                     <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3">Twitter</a>
