Added resume in portfolio

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <!-- HEADER -->
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-          <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0" href="https://pushpendraa3.github.io/email/">
+          <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0" href="https://pushpendraa3.github.io/email/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
             <span class="ml-3 text-xl">PB<span style="color:#51a7fc; font-weight:bold;">!</span></span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-white" href="https://pushpendraa3.github.io/email/">Home</a>
+            <a class="mr-5 hover:text-white" href="https://pushpendraa3.github.io/email/" target="_blank">Home</a>
             <!-- <a class="mr-5 hover:text-white" href="#">Projects</a> -->
-            <a class="mr-5 hover:text-white" href="https://github.com/pushpendraa3">Github</a>
-            <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/">Linkedin</a>
-            <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3">Twitter</a>
+            <a class="mr-5 hover:text-white" href="https://github.com/pushpendraa3" target="_blank">Github</a>
+            <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/" target="_blank">Linkedin</a>
+            <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3" target="_blank">Twitter</a>
             <a class="mr-5 hover:text-white" href="mailto:pushpendrasingh.91650@gmail.com">Send Email</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a href="#" target="_blank">Download Resume</a>
+          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a href="https://drive.google.com/file/d/1Gk7tTHEhF-5UAPr8nitvp0GGyzkjr8Sn/view?usp=sharing" target="_blank">Download Resume</a>
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -42,7 +42,7 @@
             <p class="mb-8 leading-relaxed">An email developer</p>
             <div class="flex justify-center">
               <button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg"><a href="#projects_container">View Projects</a></button>
-              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Download Resume</button>
+              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"><a href="https://drive.google.com/file/d/1Gk7tTHEhF-5UAPr8nitvp0GGyzkjr8Sn/view?usp=sharing" target="_blank">Download Resume</a></button>
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
@@ -109,7 +109,7 @@
               </div></a>
             </div>
             <!-- project six -->
-            <div class="xl:w-1/4 md:w-1/2 p-4"><a href="https://pushpendraa3.github.io/My-Site/">
+            <div class="xl:w-1/4 md:w-1/2 p-4"><a href="https://pushpendraa3.github.io/My-Site/" target="_blank">
               <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
                 <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/project/project06.png" alt="content">
                 <h3 class="tracking-widest text-blue-400 text-xs font-medium title-font">PERSONAL-PORTFOLIO WEBSITE</h3>
@@ -262,11 +262,11 @@
                     
                     <a class="mr-5 hover:text-white" href="https://pushpendraa3.github.io/email/">Home</a>
                     <a class="mr-5 hover:text-white" href="#projects_container">Projects</a>
-                    <a class="mr-5 hover:text-white" href="https://github.com/pushpendraa3">Github (get code)</a>
-                    <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/">Linkedin</a>
-                    <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3">Twitter</a>
+                    <a class="mr-5 hover:text-white" href="https://github.com/pushpendraa3" target="_blank">Github (get code)</a>
+                    <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/" target="_blank">Linkedin</a>
+                    <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3" target="_blank">Twitter</a>
                     <a class="mr-5 hover:text-white" href="mailto:pushpendrasingh.91650@gmail.com">Send Email</a>
-                    <a class="mr-5 hover:text-white" href="">Download Resume</a>
+                    <a class="mr-5 hover:text-white" href="https://drive.google.com/file/d/1Gk7tTHEhF-5UAPr8nitvp0GGyzkjr8Sn/view?usp=sharing" target="_blank">Download Resume</a>
                   </nav>
                   
                 </div>
