added target="_blank" to link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/project/project04.png" alt="content">
                 <h3 class="tracking-widest text-blue-400 text-xs font-medium title-font">PERSONAL-PORTFOLIO WEBSITE</h3>
                 <h2 class="text-lg text-white font-medium title-font mb-4">THIS WEBSITE</h2>
-                <p class="leading-relaxed text-base">I created this personaL portfolio website using HTML, CSS, Tailwind CSS, website best practices, Git, etc. This is something I really enjoyed doing. <a href="https://github.com/pushpendraa3/email" style="text-decoration: underline;"><em>view code</em></a></p>
+                <p class="leading-relaxed text-base">I created this personaL portfolio website using HTML, CSS, Tailwind CSS, website best practices, Git, etc. This is something I really enjoyed doing. <a href="https://github.com/pushpendraa3/email" target="_blank" style="text-decoration: underline;"><em>view code</em></a></p>
               </div></a>
             </div>
             <!-- project five -->
