--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3" target="_blank">Twitter</a>
             <a class="mr-5 hover:text-white" href="mailto:pushpendrasingh.91650@gmail.com">Send Email</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a href="https://drive.google.com/file/d/1Gk7tTHEhF-5UAPr8nitvp0GGyzkjr8Sn/view?usp=sharing" target="_blank">Download Resume</a>
+          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a href="https://drive.google.com/file/d/1DbxOnj9TuixGJ4_WB9zCknzk8bFJ55Ro/view?usp=sharing" target="_blank">Download Resume</a>
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -42,7 +42,7 @@
             <p class="mb-8 leading-relaxed">An email developer</p>
             <div class="flex justify-center">
               <button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg"><a href="#projects_container">View Projects</a></button>
-              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"><a href="https://drive.google.com/file/d/1Gk7tTHEhF-5UAPr8nitvp0GGyzkjr8Sn/view?usp=sharing" target="_blank">Download Resume</a></button>
+              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"><a href="https://drive.google.com/file/d/1DbxOnj9TuixGJ4_WB9zCknzk8bFJ55Ro/view?usp=sharing" target="_blank">Download Resume</a></button>
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
@@ -61,6 +61,17 @@
             </div>           
           </div>
           <div class="flex flex-wrap -m-4">
+            <!-- project one email-template-from-START-->
+            <!-- <div class="xl:w-1/4 md:w-1/2 p-4">
+              <a href="https://parcel.io/e/42b840a4-4cb1-43bb-b4d5-0e714037d86e?" target="_blank">
+                <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
+                  <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/project/email-dark.png" alt="email template">
+                  <h3 class="tracking-widest text-blue-400 text-xs font-medium title-font">NEWSLETTER EMAIL</h3>
+                  <h2 class="text-lg text-white font-medium title-font mb-4">Eco-Homes Inc Newsletter</h2>
+                  <p class="leading-relaxed text-base">Starting from a design mockup (wireframe), build this email entirely from scratch, seached images, cropped and resized them added text on email, etc.</p>
+                </div>
+              </a>
+            </div> -->
             <!-- project one -->
             <div class="xl:w-1/4 md:w-1/2 p-4">
               <a href="https://pushpendraa3.github.io/Herman-Miller/" target="_blank">
@@ -69,6 +80,17 @@
                   <h3 class="tracking-widest text-blue-400 text-xs font-medium title-font">PRODUCTION-READY EMAIL</h3>
                   <h2 class="text-lg text-white font-medium title-font mb-4">Herman-Miller Email Template</h2>
                   <p class="leading-relaxed text-base">Having some single column layouts and one double column layout, this email was easy to start with and increased  difficulty coming to end. Inspiration for this email can be found <a href="https://reallygoodemails.com/emails/save-big-on-eames-noguchi-nelson" style="text-decoration:underline;" target="_blank"><em> here.</em></a></p>
+                </div>
+              </a>
+            </div>
+            <!-- project one ETON-NEWSLETTER-->
+            <div class="xl:w-1/4 md:w-1/2 p-4">
+              <a href="https://pushpendraa3.github.io/ETON-newsletter/" target="_blank">
+                <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
+                  <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/project/email-preview.png" alt="Herman Miller email template">
+                  <h3 class="tracking-widest text-blue-400 text-xs font-medium title-font">PRODUCTION-READY EMAIL</h3>
+                  <h2 class="text-lg text-white font-medium title-font mb-4">ETON-newsletter</h2>
+                  <p class="leading-relaxed text-base">This email stands out with its design. I took design inspiration from <em>reallygoodemails.com.</em>This follows pixel-perfect design while staying responsive as well.</p>
                 </div>
               </a>
             </div>
@@ -154,7 +176,7 @@
 
         <div class="container px-5 py-24 mx-auto">
           <div class="-my-8 divide-y-2 divide-gray-800">
-            <div class="py-8 flex flex-wrap md:flex-nowrap">
+            <!-- <div class="py-8 flex flex-wrap md:flex-nowrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
                 <span class="font-semibold title-font text-white">ALMABETTER</span>
                 <span class="mt-1 text-gray-500 text-sm">Nov 2022-Present</span>
@@ -164,14 +186,14 @@
                 <p class="leading-relaxed">
                   - leading a team of 5 members learn web development skills and in day to day assignments and various capstone projects.
                 </p>
-                <!-- <a class="text-blue-400 inline-flex items-center mt-4">Learn More
+                 <a class="text-blue-400 inline-flex items-center mt-4">Learn More
                   <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
                   </svg>
-                </a> -->
+                </a> 
               </div>
-            </div>
+            </div> -->
             <div class="py-8 flex border-t-2 border-gray-800 flex-wrap md:flex-nowrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
                 <span class="font-semibold title-font text-white">JIWAJI UNIVERSITY</span>
@@ -266,7 +288,7 @@
                     <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/" target="_blank">Linkedin</a>
                     <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3" target="_blank">Twitter</a>
                     <a class="mr-5 hover:text-white" href="mailto:pushpendrasingh.91650@gmail.com">Send Email</a>
-                    <a class="mr-5 hover:text-white" href="https://drive.google.com/file/d/1Gk7tTHEhF-5UAPr8nitvp0GGyzkjr8Sn/view?usp=sharing" target="_blank">Download Resume</a>
+                    <a class="mr-5 hover:text-white" href="https://drive.google.com/file/d/1DbxOnj9TuixGJ4_WB9zCknzk8bFJ55Ro/view?usp=sharing" target="_blank">Download Resume</a>
                   </nav>
                   
                 </div>
