--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/project/project01.png" alt="Herman Miller email template">
                   <h3 class="tracking-widest text-blue-400 text-xs font-medium title-font">PRODUCTION-READY EMAIL</h3>
                   <h2 class="text-lg text-white font-medium title-font mb-4">Herman-Miller Email Template</h2>
-                  <p class="leading-relaxed text-base">Having some single column layouts and one double column layout, this email was easy to start with and increased  difficulty coming to end. Inspiration for this email can be found <a href="https://reallygoodemails.com/emails/save-big-on-eames-noguchi-nelson" style="text-decoration:underline;" target="_blank"><em> here.</em></a></p>
+                  <p class="leading-relaxed text-base">Having some single column layouts and one double column layout, this email was easy to start with and increased  difficulty coming to end. </a></p>
                 </div>
               </a>
             </div>
