added new email project

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
           <div class="flex flex-wrap -m-4">
             <!-- project one email-template-from-START-->
-            <!-- <div class="xl:w-1/4 md:w-1/2 p-4">
+            <div class="xl:w-1/4 md:w-1/2 p-4">
               <a href="https://parcel.io/e/42b840a4-4cb1-43bb-b4d5-0e714037d86e?" target="_blank">
                 <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
                   <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/project/email-dark.png" alt="email template">
@@ -99,7 +99,7 @@
                   <p class="leading-relaxed text-base">Starting from a design mockup (wireframe), build this email entirely from scratch, seached images, cropped and resized them added text on email, etc.</p>
                 </div>
               </a>
-            </div> -->
+            </div>
             <!-- project one -->
             <div class="xl:w-1/4 md:w-1/2 p-4">
               <a href="https://pushpendraa3.github.io/Herman-Miller/" target="_blank">
