--- a/index.html
+++ b/index.html
@@ -90,13 +90,27 @@
           </div>
           <div class="flex flex-wrap -m-4">
             <!-- project one email-template-from-START-->
-            <div class="xl:w-1/4 md:w-1/2 p-4">
+            <!-- <div class="xl:w-1/4 md:w-1/2 p-4">
               <a href="https://parcel.io/e/42b840a4-4cb1-43bb-b4d5-0e714037d86e?" target="_blank">
                 <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
                   <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/project/email-dark.png" alt="email template">
                   <h3 class="tracking-widest text-blue-400 text-xs font-medium title-font">NEWSLETTER EMAIL</h3>
                   <h2 class="text-lg text-white font-medium title-font mb-4">Eco-Homes Inc Newsletter</h2>
                   <p class="leading-relaxed text-base">Starting from a design mockup (wireframe), build this email entirely from scratch, seached images, cropped and resized them added text on email, etc.</p>
+                </div>
+              </a>
+            </div> -->
+            <!-- project one -->
+            <div class="xl:w-1/4 md:w-1/2 p-4">
+              <a href="https://parcel.io/e/42b840a4-4cb1-43bb-b4d5-0e714037d86e?" target="_blank">
+                <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
+                  <div class="scrollable-div">
+                    <img class="scrollable-img " src="images/project/email-dark.png" alt="email template dark mode">
+                  </div>
+                 
+                  <!-- <h3 class="tracking-widest text-blue-400 text-xs font-medium title-font">PRODUCTION-READY EMAIL</h3> -->
+                  <h2 class="text-lg text-white font-medium title-font center">Eco-Homes Inc</h2>
+                  <!-- <p class="leading-relaxed text-base">Having some single column layouts and one double column layout, this email was easy to start with and increased  difficulty coming to end. </a></p> -->
                 </div>
               </a>
             </div>
