add about me section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Pushpendra Singh Bhadoriya Email Developer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+      .about-me {
+        padding-top: 40px;
+        padding-bottom: 40px;
+      }
       .scrollable-img {
         overflow: auto;
         box-sizing:border-box;
@@ -41,7 +45,7 @@
     <!-- HEADER -->
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-          <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0" href="https://pushpendraa3.github.io/email/" target="_blank">
+          <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0" href="https://pushpendraa3.github.io/email/">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
@@ -79,6 +83,16 @@
         </div>
       </section>
 
+      <!-- ABOUT ME -->
+      <section class="text-gray-400 bg-gray-900 body-font relative">
+        <div class="container px-5 mx-auto about-me">
+          <div class="flex flex-col text-center w-full">
+            <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">About Me</h1>
+            <div class="h-1 w-15 bg-blue-500 rounded middle"></div>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="width:90%;" >I have always been fascinated by computers in general. While I was serving in NCC in my college days, I tried programming. And I have been hooked into it since then. It feels like a superpower to give instructions to a powerful machine and a sense of pleasure to see it doing the work for you.</p>
+          </div>
+        </div>
+      </section>
       <!-- PROJECTS -->
       <section class="text-gray-400 body-font bg-gray-900">
         <div class="container px-5 py-24 mx-auto">
@@ -169,7 +183,7 @@
       
       <section class="text-gray-400 bg-gray-900 body-font overflow-hidden">
          
-      <br>
+  
       <br>
       <br>
            <div class="lg:w-1/2 w-full mb-6 lg:mb-0" style="margin-left:20px;">
@@ -242,7 +256,7 @@
 
       <!-- FOOTER -->
       <section class="text-gray-400 bg-gray-900 body-font relative">
-        <div class="container px-5 py-24 mx-auto">
+        <div class="container px-5 mx-auto">
           <div class="flex flex-col text-center w-full mb-12">
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Contact Me</h1>
             <div class="h-1 w-15 bg-blue-500 rounded middle"></div>
@@ -279,6 +293,7 @@
               <!-- footer icons ends here -->
                 <hr style="margin: 20px auto 40px auto; width: 100%; border:0; border-bottom: 1px solid; opacity: 0.2;">
                 <a class="text-blue-400" href="mailto:pushpendrasingh.91650@gmail.com">&copy; <sup>2023</sup> pushpendrasingh.91650@gmail.com</a>
+                <hr style="margin: 60px auto 0 auto; width: 100%; border:0; border-bottom: 0 solid; opacity: 0;">
               </div>
             </div>
           </div>
@@ -286,3 +301,6 @@
       </section>
 </body>
 </html>
+
+
+
