--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3" target="_blank">Twitter</a>
             <a class="mr-5 hover:text-white" href="mailto:pushpendrasingh.91650@gmail.com">Send Email</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a href="https://drive.google.com/file/d/1DbxOnj9TuixGJ4_WB9zCknzk8bFJ55Ro/view?usp=sharing" target="_blank">Download Resume</a>
+          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a href="https://pushpendraa3.github.io/404" target="_blank">Download Resume</a>
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -74,7 +74,7 @@
             <p class="mb-8 leading-relaxed">A Full-Stack Software Developer</p>
             <div class="flex justify-center">
               <button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg"><a href="#projects_container">View Projects</a></button>
-              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"><a href="https://drive.google.com/file/d/1DbxOnj9TuixGJ4_WB9zCknzk8bFJ55Ro/view?usp=sharing" target="_blank">Download Resume</a></button>
+              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"><a href="https://pushpendraa3.github.io/404" target="_blank">Download Resume</a></button>
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
@@ -285,7 +285,7 @@
                     <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/" target="_blank">Linkedin</a>
                     <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3" target="_blank">Twitter</a>
                     <a class="mr-5 hover:text-white" href="mailto:pushpendrasingh.91650@gmail.com">Send Email</a>
-                    <a class="mr-5 hover:text-white" href="https://drive.google.com/file/d/1DbxOnj9TuixGJ4_WB9zCknzk8bFJ55Ro/view?usp=sharing" target="_blank">Download Resume</a>
+                    <a class="mr-5 hover:text-white" href="https://pushpendraa3.github.io/404" target="_blank">Download Resume</a>
                   </nav>
                   
                 </div>
