--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               </header>
               <!-- footer icons ends here -->
                 <hr style="margin: 20px auto 40px auto; width: 100%; border:0; border-bottom: 1px solid; opacity: 0.2;">
-                <a class="text-blue-400" href="mailto:pushpendrasingh.91650@gmail.com">&copy; <sup>2023</sup> pushpendrasingh.91650@gmail.com</a>
+                <a class="text-blue-400" href="mailto:pushpendrasingh.91650@gmail.com">&copy;  pushpendrasingh.91650@gmail.com</a>
                 <hr style="margin: 60px auto 0 auto; width: 100%; border:0; border-bottom: 0 solid; opacity: 0;">
               </div>
             </div>
