updated fecon for website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pushpendra Singh Bhadoriya Web Developer</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" href="fevicon/Fevicon.png" type="image/x-icon">
     <style>
       .about-me {
         padding-top: 40px;
