--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pushpendra Singh Bhadoriya Web Developer</title>
+    <link rel="shortcut icon" href="images/fevicon/Fevicon.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="fevicon/Fevicon.png" type="image/x-icon">
     <style>
       .about-me {
         padding-top: 40px;
