change about me para

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="flex flex-col text-center w-full">
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">About Me</h1>
             <div class="h-1 w-15 bg-blue-500 rounded middle"></div>
-            <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="width:90%;" >I have always been fascinated by computers in general. While I was serving in NCC in my college days, I tried programming. And I have been hooked into it since then. It feels like a superpower to give instructions to a powerful machine and a sense of pleasure to see it doing the work for you.</p>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="width:90%;" >I have always been fascinated by computers in general. While serving in NCC (Army) in my college days, I tried programming. And I have been hooked into it since then. It feels like a superpower to give instructions to a powerful machine and a sense of pleasure to see it doing the work for you.</p>
           </div>
         </div>
       </section>
