--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           <div class="flex flex-col text-center w-full mb-12">
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Contact Me</h1>
             <div class="h-1 w-15 bg-blue-500 rounded middle"></div>
-            <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="width:100%;" >If you have a project that you want to get started, think you need my help with something or just fancy saying hey! then <span style="font-weight: bold;">get in touch.</span></p>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="width:100%;" >If you have a project that you want to get started, think you need my help with something or just fancy saying 'Hi' then <span style="font-weight: bold;"><a href="mailto:pushpendrasingh.91650@gmail.com">get in touch.</a></span></p>
           </div>
           <div class="lg:w-1/2 md:w-2/3 mx-auto">
             <div class="flex flex-wrap -m-2">
@@ -293,7 +293,7 @@
               </header>
               <!-- footer icons ends here -->
                 <hr style="margin: 20px auto 40px auto; width: 100%; border:0; border-bottom: 1px solid; opacity: 0.2;">
-                <a class="text-blue-400" href="mailto:pushpendrasingh.91650@gmail.com">&copy;  pushpendrasingh.91650@gmail.com</a>
+                <a class="text-blue-400" href="mailto:pushpendrasingh.91650@gmail.com">&copy;  pushpendrasingh.91650@gmail.com 2023</a>
                 <hr style="margin: 60px auto 0 auto; width: 100%; border:0; border-bottom: 0 solid; opacity: 0;">
               </div>
             </div>
