add link to blog

--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
     <!-- HEADER -->
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-          <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0" href="https://pushpendraa3.github.io/email/">
+          <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0" href="https://www.pushpendra.cf/">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
             <span class="ml-3 text-xl">PB<span style="color:#51a7fc; font-weight:bold;">!</span></span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+            <a class="mr-5 hover:text-white" href="https://blog.pushpendra.cf/" target="_blank">Blog</a>
             <a class="mr-5 hover:text-white" href="https://github.com/pushpendraa3" target="_blank">Github</a>
             <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/" target="_blank">Linkedin</a>
             <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3" target="_blank">Twitter</a>
@@ -286,7 +287,7 @@
                     <a class="mr-5 hover:text-white" href="https://www.linkedin.com/in/pushpendraa3/" target="_blank">Linkedin</a>
                     <a class="mr-5 hover:text-white" href="https://twitter.com/Pushpendraa3" target="_blank">Twitter</a>
                     <a class="mr-5 hover:text-white" href="mailto:pushpendrasingh.91650@gmail.com">Send Email</a>
-                    <a class="mr-5 hover:text-white" href="https://pushpendraa3.github.io/404" target="_blank">Download Resume</a>
+                    <a class="mr-5 hover:text-white" href="https://blog.pushpendra.cf/" target="_blank">Blog</a>
                   </nav>
                   
                 </div>
