--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
               <a href="https://parcel.io/e/42b840a4-4cb1-43bb-b4d5-0e714037d86e?" target="_blank">
                 <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
                   <div class="scrollable-div">
-                    <img class="scrollable-img " src="images/project/email-dark.png" alt="email template dark mode">
                   </div>
                   <h2 class="text-lg text-white font-medium title-font center">Eco-Homes Inc</h2>
                 </div>
@@ -197,13 +196,40 @@
 
             <div class="py-8 flex flex-wrap md:flex-nowrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-                <span class="font-semibold title-font text-white">ALMABETTER</span>
-                <span class="mt-1 text-gray-500 text-sm">Nov 2022-Present</span>
+                <span class="font-semibold title-font text-white"><a href="https://sandeepsappal.in">SANDEEPSAPPAL.IN</a></span>
+                <span class="mt-1 text-gray-500 text-sm">May 2025-Present</span>
               </div>
               <div class="md:flex-grow">
-                <h2 class="text-2xl font-medium text-white title-font mb-2">WEB DEVELOPMENT BOOTCAMP WITH WEB3</h2>
+                <h2 class="text-2xl font-medium text-white title-font mb-2">WEB DEVELOPMENT</h2>
                 <p class="leading-relaxed">
-                  - Leading a team of 5 developers in various projects and helping them grow their skills in Web Development.
+                  - Recently started, learning webDev practically.  
+                </p>
+              </div>
+            </div>
+
+            <div class="py-8 flex flex-wrap md:flex-nowrap">
+              <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+                <span class="font-semibold title-font text-white">INTERNET</span>
+                <span class="mt-1 text-gray-500 text-sm">Jan 2024-Apr 2025</span>
+              </div>
+              <div class="md:flex-grow">
+                <h2 class="text-2xl font-medium text-white title-font mb-2">WEB DEVELOPMENT</h2>
+                <p class="leading-relaxed">
+                  - Learnt various aspects of coding.
+                  - Initially tried to learn webDev all online, later realised importance of having a peer group.  
+                </p>
+              </div>
+            </div>
+
+            <div class="py-8 flex flex-wrap md:flex-nowrap">
+              <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+                <span class="font-semibold title-font text-white">INTERNET</span>
+                <span class="mt-1 text-gray-500 text-sm">Nov 2022-Dec 2023</span>
+              </div>
+              <div class="md:flex-grow">
+                <h2 class="text-2xl font-medium text-white title-font mb-2">EMAIL CODING</h2>
+                <p class="leading-relaxed">
+                  - Learnt various aspects of email coding. 
                 </p>
               </div>
             </div>
