rewrite email para

--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
               <div class="md:flex-grow">
                 <h2 class="text-2xl font-medium text-white title-font mb-2">EMAIL CODING</h2>
                 <p class="leading-relaxed">
-                  - Learnt various aspects of email coding. 
+                  - Became job ready in email coding.
+                  - Appeared for interviews. Didn't joined.
                 </p>
               </div>
             </div>
