para appears in proper lines

--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
                 <h2 class="text-2xl font-medium text-white title-font mb-2">WEB DEVELOPMENT</h2>
                 <p class="leading-relaxed">
                   - Learnt various aspects of coding.
+                </p>
+                <p class="leading-relaxed">
                   - Initially tried to learn webDev all online, later realised importance of having a peer group.  
                 </p>
               </div>
@@ -230,7 +232,9 @@
                 <h2 class="text-2xl font-medium text-white title-font mb-2">EMAIL CODING</h2>
                 <p class="leading-relaxed">
                   - Became job ready in email coding.
-                  - Appeared for interviews. Didn't joined.
+                </p>
+                <p class="leading-relaxed">
+                  - Became job ready in email coding.
                 </p>
               </div>
             </div>
