--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                   - Became job ready in email coding.
                 </p>
                 <p class="leading-relaxed">
-                  - Became job ready in email coding.
+                  - Appeared for interviews. Didn't joined.
                 </p>
               </div>
             </div>
