fix: first project img not showing

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
               <a href="https://parcel.io/e/42b840a4-4cb1-43bb-b4d5-0e714037d86e?" target="_blank">
                 <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
                   <div class="scrollable-div">
+                    <img class="scrollable-img " src="images/project/email-dark.png" alt="email template dark mode">
                   </div>
                   <h2 class="text-lg text-white font-medium title-font center">Eco-Homes Inc</h2>
                 </div>
